--- a/app/elements/coder/code-editor/file-explorer/file-explorer-item.html
+++ b/app/elements/coder/code-editor/file-explorer/file-explorer-item.html
@@ -3,7 +3,7 @@
 <link rel="import" href="../../../../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../../../../bower_components/paper-dialog/paper-dialog.html">
 
-<dom-module id="file-item">
+<dom-module id="file-exporer-item">
 	<template>
 		<style include="iron-flex">
 			div#wrapper {
@@ -40,7 +40,7 @@
 	</template>
 	<script>
 		Polymer({
-			is: 'file-item',
+			is: 'file-exporer-item',
 			properties: {
 				item: {
 					reflectToAttribute: true,
