--- a/app/elements/coder/code-editor/code-editor.html
+++ b/app/elements/coder/code-editor/code-editor.html
@@ -25,7 +25,7 @@
 		<context-menu id="contextMenu"></context-menu>
 		<div class="container">
 			<div class="explorer-container" style$="{{explorerStyle}}">
-				<explorer-element style="height: 100%;"></explorer-element>
+				<file-explorer style="height: 100%;"></file-explorer>
 			</div>
 			<div class="editor-container">
 				<div>
@@ -82,11 +82,7 @@
 					if(!that.selectedFile){
 						return console.log('no selected file')
 					}
-					that.$$('explorer-element').update(that.selectedFile.path, that.selectedFile.item.name, content);
-					console.log(that.selectedFile.path, that.selectedFile.item.name);
-					// that.selectedFile.setContent(content);
-					// that.tree.set(that.selectedFile.path, content);
-					// console.log(that.tree.root);
+					that.$$('file-explorer').update(that.selectedFile.path, that.selectedFile.item.name, content);
 				});
 				this.$.editor.commands.addCommand({
 					name: 'run',
@@ -118,7 +114,7 @@
 					this.selectedFile.unselectFile();
 				}
 				this.selectedFile = detail;
-				this.setValue(this.$$('explorer-element').get(this.selectedFile.path, this.selectedFile.item.name));
+				this.setValue(this.$$('file-explorer').get(this.selectedFile.path, this.selectedFile.item.name));
 			},
 			_toggle: function() {
 				if (this.toggleExplorerIcon === 'chevron-left') {
@@ -133,19 +129,8 @@
 				this.tree = new Tree(rootFolder);
 				this.notifyPath('tree');
 			},
-			_toArray: function(obj){
-				if(!obj){
-					return;
-				}
-				return Object.keys(obj).map(function(key) {
-					return {
-						name: key,
-						value: obj[key]
-					};
-				});
-			},
 			getFiles: function() {
-				return this.$$('explorer-element').getFiles();
+				return this.$$('file-explorer').getFiles();
 			},
 			setValue: function(text) {
 				if (text === null || text === undefined) {
