Make base return functions

--- a/app/elements/app-element.html
+++ b/app/elements/app-element.html
@@ -71,18 +71,18 @@
 					value: 0
 				}
 			},
-			loadUser: function(success, error){
-				var self = this;
+			loadUser: function(success, error) {
+				var that = this;
 				var cookieService = document.createElement('cookie-service');
-				cookieService.addEventListener('user-ok', function(e){
-					self.user = e.detail;
-					self.refreshMenu();
-					if(!!success){
+				cookieService.addEventListener('user-ok', function(e) {
+					that.user = e.detail;
+					that.refreshMenu();
+					if (!!success) {
 						success();
 					}
 				});
-				cookieService.addEventListener('user-error', function(){
-					if(!!error){
+				cookieService.addEventListener('user-error', function() {
+					if (!!error) {
 						return error();
 					}
 					page('/login');
