--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -1,54 +1,62 @@
 <script src="../bower_components/page/page.js"></script>
 <script>
 window.addEventListener('WebComponentsReady', function() {
-
-	function base(success, error){
-		if(app.user && Object.keys(app.user).length !== 0){
-			return success();
-		}
-		app.loadUser(success, error);
+	function base(success, error) {
+		return function(ctx) {
+			if (app.user && Object.keys(app.user).length !== 0) {
+				return success(ctx);
+			}
+			app.loadUser(
+				function() {
+					success(ctx);
+				},
+				function() {
+					error(ctx);
+				}
+			);
+		};
 	}
+
 	// COMMON
-	page('/', function() {
-		base(function(){
+	page('/', base(function() {
 			if (app.user.activeOrganization) {
 				return page('/challengetemplates');
 			}
-			if(localStorage.contextKey === 'challenge-register'){
+			if (localStorage.contextKey === 'challenge-register') {
 				localStorage.removeItem('contextKey');
 				localStorage.removeItem('contextValue');
 				return page('/contest/' + localStorage.contextValue + '/register');
 			}
 			page('/contests');
-		});
-	});
+		})
+	);
 
-	page('/settings', function() {
-		base(function(){
+	page('/settings', base(function() {
 			app.swapContent(document.createElement('settings-page'));
-		});
-	});
+		})
+	);
 
-	page('/register', function() {
-		base(function(){
+	page('/register', base(
+		function() {
 			page('/');
-		}, function(){
+		},
+		function() {
 			app.swapContent(document.createElement('register-page'));
-		});
-	});
+		})
+	);
 
 	page('/unauthorized', function() {
 		// TODO
 	});
 
-	page('/login', function(ctx) {
-		base(function(){
+	page('/login', base(
+		function() {
 			page('/');
-		}, function(){
+		}, function() {
 			var content = document.createElement('login-wizard');
 			app.swapContent(content);
-		});
-	});
+		})
+	);
 
 	page('/logout', function() {
 		app.logout();
@@ -60,150 +68,136 @@ window.addEventListener('WebComponentsReady', function() {
 		app.swapContent(page);
 	});
 
-	page('/u/:username', function(ctx) {
-		base(function(){
+	page('/u/:username', base(function(ctx) {
 			var page = document.createElement('profile-page');
 			page.username = ctx.params.username;
 			page.isCurrentUser = (ctx.params.username === app.user.username);
 			app.swapContent(page);
-			if(!ctx.querystring){
+			if (!ctx.querystring) {
 				return;
 			}
 			var qs = ctx.querystring.split('&');
-			for(var i=0;i<qs.length;i++) {
-				if(qs[i].indexOf('teamCreate=')===0 && qs[i].split('=')[1]==='true') {
+			for (var i = 0; i < qs.length; i++) {
+				if (qs[i].indexOf('teamCreate=') === 0 && qs[i].split('=')[1] === 'true') {
 					page.createTeam();
 					return;
 				}
 			}
-		});
-	});
+		})
+	);
 
-	page('/t/:canonicalName', function(ctx) {
-		base(function(){
+	page('/t/:canonicalName', base(function(ctx) {
 			var page = document.createElement('team-profile-page');
 			page.canonicalName = ctx.params.canonicalName;
 			app.swapContent(page);
-		});
-	});
+		})
+	);
+
 	// admin
-	page('/admin', function() {
-		base(function(){
+	page('/admin', base(function() {
 			app.swapContent(document.createElement('admin-page'));
-		});
-	});
+		})
+	);
 
 	// COMPANY
-	page('/challenge/create', function() {
-		base(function(){
+	page('/challenge/create', base(function() {
 			var page = document.createElement('task-list');
 			page.startChallengeCreation();
 			app.swapContent(page);
-		});
-	});
+		})
+	);
 
-	page('/challenges/:canonicalName', function(ctx) {
-		base(function(){
+	page('/challenges/:canonicalName', base(function(ctx) {
 			var page = document.createElement('challenge-detail');
 			page.canonicalName = ctx.params.canonicalName;
 			app.swapContent(page);
-		});
-	});
+		})
+	);
 
-	page('/challengetemplates', function () {
-		base(function(){
+	page('/challengetemplates', base(function() {
 			app.swapContent(document.createElement('challenge-template-list'));
-		});
-	});
+		})
+	);
 
-	page('/challenges/template/:id', function(ctx){
-		base(function(){
+	page('/challenges/template/:id', base(function(ctx) {
 			var page = document.createElement('challenge-template-detail');
 			page.challengeTemplateId = ctx.params.id;
 			app.swapContent(page);
-		});
-	});
+		})
+	);
 
-	page('/challenge/template/:templateId/create', function(ctx) {
-		base(function(){
+	page('/challenge/template/:templateId/create', base(function(ctx) {
 			var page = document.createElement('challenge-create');
 			page.challengeTemplate = ctx.params.templateId;
 			app.swapContent(page);
-		});
-	});
+		})
+	);
 
-	page('/tasks', function() {
-		base(function(){
+	page('/tasks', base(function() {
 			app.swapContent(document.createElement('task-list'));
-		});
-	});
+		})
+	);
 
-	page('/tasks/:id', function(ctx) {
-		base(function(){
+	page('/tasks/:id', base(function(ctx) {
 			var page = document.createElement('task-detail');
 			page.taskId = ctx.params.id;
 			app.swapContent(page);
-		});
-	});
+		})
+	);
 
-	page('/task/create', function(){
-		base(function(){
+	page('/task/create', base(function() {
 			app.swapContent(document.createElement('task-form'));
-		});
-	});
+		})
+	);
 
-	page('/task/edit/:id', function(ctx){
-		base(function(){
+	page('/task/edit/:id', base(function(ctx) {
 			var page = document.createElement('task-form');
 			page.taskId = ctx.params.id;
 			app.swapContent(page);
-		});
-	});
+		})
+	);
 
 	// CODER
 	page('/token/:token', function(ctx) {
 		app.inviteByToken(ctx.params.token);
 	});
 
-	page('/contests', function() {
-		base(function(){
+	page('/contests', base(function() {
 			app.swapContent(document.createElement('available-challenges-page'));
-		});
-	});
+		})
+	);
 
-	page('/contest/:canonicalName/register', function(ctx) {
-		base(function(){
+	page('/contest/:canonicalName/register', base(
+		function(ctx) {
 			page('/contest/' + ctx.params.canonicalName + '/info');
-		}, function(){
+		},
+		function(ctx) {
 			var wizard = document.createElement('challenge-register-wizard');
 			wizard.canonicalName = ctx.params.canonicalName;
 			app.swapContent(wizard);
-		});
-	});
+		})
+	);
 
-	page('/contest/:canonicalName', function(ctx) {
-		base(function(){
+	page('/contest/:canonicalName', base(function(ctx) {
 			var page = document.createElement('challenge-page');
 			page.canonicalName = ctx.params.canonicalName;
 			app.swapContent(page);
-		});
-	});
+		})
+	);
 
-	page('/contest/:canonicalName/info', function(ctx) {
-		base(function(){
+	page('/contest/:canonicalName/info', base(function(ctx) {
 			var page = document.createElement('challenge-info-page');
 			page.canonicalName = ctx.params.canonicalName;
 			app.swapContent(page);
-		});
-	});
+		})
+	);
 
-	page('/contest/:id/result', function(ctx) {
-		base(function(){
+	page('/contest/:id/result', base(function(ctx) {
 			var page = document.createElement('contest-result');
 			page.challengeId = ctx.params.id;
 			app.swapContent(page);
-		});
-	});
+		})
+	);
 
 	page({
 		hashbang: false
