User: forgot password page (#298)

--- a/app/elements/app-nav.html
+++ b/app/elements/app-nav.html
@@ -67,7 +67,7 @@
 				<paper-menu-button horizontal-align="right">
 					<paper-icon-button icon="supervisor-account" class="dropdown-trigger"></paper-icon-button>
 					<paper-listbox class="dropdown-content">
-						<paper-item><a href="/settings" style="color: #444444; text-decoration: none;">Settings</a></paper-item>
+						<paper-item><a href="/user/settings" style="color: #444444; text-decoration: none;">Settings</a></paper-item>
 						<paper-item><a href="/logout" style="color: #444444; text-decoration: none;">Logout</a></paper-item>
 					</paper-listbox>
 				</paper-menu-button>
