--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -31,11 +31,6 @@ window.addEventListener('WebComponentsReady', function() {
 		})
 	);
 
-	page('/settings', base(function() {
-			app.swapContent(document.createElement('settings-page'));
-		})
-	);
-
 	page('/register', base(
 		function() {
 			page('/');
@@ -44,6 +39,33 @@ window.addEventListener('WebComponentsReady', function() {
 			app.swapContent(document.createElement('register-page'));
 		})
 	);
+
+	page('/user/settings', function() {
+		app.swapContent(document.createElement('settings-page'));
+	});
+
+	page('/user/password/reset', base(
+		function() {
+			page('/');
+		},
+		function() {
+			var page = document.createElement('password-reset-page');
+			if(!ctx.querystring){
+				app.swapContent(document.createElement('password-forgot-page'));
+			}
+			var qs = ctx.querystring.split('&');
+			for(var i=0;i<qs.length;i++) {
+				if(qs[i].indexOf('token=')===0) {
+					page.token = qs[i].split('=')[1];
+				}
+			}
+			if (!page.token) {
+				return;
+			}
+			app.swapContent(page);
+		})
+	);
+
 
 	page('/unauthorized', function() {
 		// TODO
