--- a/app/elements/user/settings/settings-page.html
+++ b/app/elements/user/settings/settings-page.html
@@ -3,7 +3,7 @@
 <link rel="import" href="../../../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../../../bower_components/iron-form/iron-form.html">
 
-<link rel="import" href="../error/errors-display.html">
+<link rel="import" href="../../common/error/errors-display.html">
 
 <dom-module id="settings-page">
 	<style include="iron-flex iron-flex-reverse">
