--- a/app/elements/app-element.html
+++ b/app/elements/app-element.html
@@ -1,5 +1,5 @@
 <link rel="import" href="../styles/coduno.html">
-<link rel="import" href="../../bower_components/google-apis/google-maps-api.html">
+<link rel="import" href="../bower_components/google-apis/google-maps-api.html">
 
 <dom-module id="app-element">
 	<style include="coduno-style">
