--- a/app/elements/coder/code-editor/file-explorer/file-explorer.html
+++ b/app/elements/coder/code-editor/file-explorer/file-explorer.html
@@ -17,6 +17,11 @@
 		Polymer({
 			is: 'file-explorer',
 			properties: {
+				language: {
+					type: String,
+					notify: true,
+					reflectToAttribute: true
+				},
 				tree: {
 					type: Object,
 					notify: true
@@ -35,10 +40,16 @@
 				'rename': 'onRename',
 				'delete': 'onDelete',
 				'add-file': 'onAddFile',
-				'add-folder': 'onAddFolder'
+				'add-folder': 'onAddFolder',
+				'file-selected': '_fileSelected'
 			},
 			ready: function(){
 				this.tree = {'root': {}};
+			},
+			_fileSelected: function(e, detail){
+				if(detail.item.name.indexOf('.') !== -1){
+					this.language = detail.item.name.substring(detail.item.name.lastIndexOf('.') + 1, detail.item.name.length);
+				}
 			},
 			get: function(path, name){
 				var node = this.getNodeForPath(this.tree, path + name)
@@ -57,6 +68,9 @@
 				var tree = this.tree;
 				if(!this.addItem(tree, e.detail.path, '')){
 					return;
+				}
+				if(e.detail.path.indexOf('.') !== -1){
+					this.language = e.detail.path.substring(e.detail.path.lastIndexOf('.') + 1, e.detail.path.length);
 				}
 				this.refreshTree(tree);
 			},
